[package]
name = "buisson-tui"
version.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
cli-log = "2.0.0"
crossterm = "0.28.*"
ratatui = "0.29.*"
buisson-common = { path = "../buisson-common" }
buisson-database = { path = "../buisson-database" }
xdg = "2.5.2"
chrono = "0.4.38"
unicode-width = "0.2.0"
rand = "0.8.5"
rusqlite = "0.32.*"
